trevrpc-c/include/trevrpc_transport.h

#define TREVRPC_TRANSPORT_ABI_VERSION 1u
#define TREVRPC_TRANSPORT_STRUCT_VERSION_1 1u
#define TREVRPC_TRANSPORT_DEFAULT_EVENT_CAPACITY 256u
#define TREVRPC_TRANSPORT_DEFAULT_LISTENER_CAPACITY 16u
#define TREVRPC_TRANSPORT_DEFAULT_CONNECTION_CAPACITY 1024u
#define TREVRPC_TRANSPORT_DEFAULT_STREAM_CAPACITY 4096u
#define TREVRPC_TRANSPORT_DEFAULT_MAX_RECEIVE_OWNED_COUNT 4096u
#define TREVRPC_TRANSPORT_DEFAULT_MAX_RECEIVE_OWNED_BYTES (64ull * 1024ull * 1024ull)
#define TREVRPC_TRANSPORT_DEFAULT_MAX_FRAME_SIZE (4ull * 1024ull * 1024ull)
#define TREVRPC_TRANSPORT_DEFAULT_MAX_FIELD_SECTION_SIZE (64ull * 1024ull)
#define TREVRPC_TRANSPORT_DEFAULT_MAX_PENDING_SEND_BYTES (64ull * 1024ull * 1024ull)
#define TREVRPC_TRANSPORT_DEFAULT_MAX_PENDING_SEND_COUNT 1024u
#define TREVRPC_TRANSPORT_DEFAULT_MAX_PENDING_RECEIVE_BYTES (64ull * 1024ull * 1024ull)
#define TREVRPC_TRANSPORT_DEFAULT_MAX_PENDING_RECEIVE_COUNT 4096u
#define TREVRPC_TRANSPORT_DEFAULT_UNRESOLVED_STREAM_COUNT 64u
#define TREVRPC_TRANSPORT_DEFAULT_UNRESOLVED_STREAM_BYTES (64ull * 1024ull * 1024ull)
#define TREVRPC_TRANSPORT_DEFAULT_UNRESOLVED_STREAM_TIMEOUT_MS 5000u
#define TREVRPC_TRANSPORT_MAX_WAKE_SOURCES 8u
#define TREVRPC_TRANSPORT_STATE_RUNNING 0u
#define TREVRPC_TRANSPORT_STATE_STOPPING 1u
#define TREVRPC_TRANSPORT_STATE_STOPPED 2u
#define TREVRPC_TRANSPORT_WAKE_SOURCE_POSIX_FD 1u
#define TREVRPC_TRANSPORT_WAKE_FLAG_BORROWED 0x1u
#define TREVRPC_TRANSPORT_WAKE_FLAG_LEVEL_TRIGGERED 0x2u
#define TREVRPC_TRANSPORT_OBJECT_NONE 0u
#define TREVRPC_TRANSPORT_OBJECT_LISTENER 1u
#define TREVRPC_TRANSPORT_OBJECT_CONNECTION 2u
#define TREVRPC_TRANSPORT_OBJECT_STREAM 3u
#define TREVRPC_TRANSPORT_EVENT_DIAGNOSTIC 1u
#define TREVRPC_TRANSPORT_EVENT_STOPPED 2u
#define TREVRPC_TRANSPORT_EVENT_LISTENER_STOPPED 3u
#define TREVRPC_TRANSPORT_EVENT_CONNECTION_READY 4u
#define TREVRPC_TRANSPORT_EVENT_CONNECTION_FAILED 5u
#define TREVRPC_TRANSPORT_EVENT_CONNECTION_CLOSED 6u
#define TREVRPC_TRANSPORT_EVENT_STREAM_READY 7u
#define TREVRPC_TRANSPORT_EVENT_STREAM_FAILED 8u
#define TREVRPC_TRANSPORT_EVENT_STREAM_READABLE 9u
#define TREVRPC_TRANSPORT_EVENT_RECEIVE_FIN 10u
#define TREVRPC_TRANSPORT_EVENT_SEND_COMPLETE 11u
#define TREVRPC_TRANSPORT_EVENT_STREAM_CLOSED 12u
#define TREVRPC_TRANSPORT_EVENT_HTTP3_ADMISSION 13u
#define TREVRPC_TRANSPORT_EVENT_WEBTRANSPORT_ADMISSION 14u
#define TREVRPC_TRANSPORT_EVENT_SEND_STOPPED 15u
#define TREVRPC_TRANSPORT_EVENT_FLAG_FATAL 0x00000001u
#define TREVRPC_TRANSPORT_EVENT_FLAG_TERMINAL 0x00000002u
#define TREVRPC_TRANSPORT_EVENT_FLAG_CLIENT 0x00000004u
#define TREVRPC_TRANSPORT_EVENT_FLAG_SERVER 0x00000008u
#define TREVRPC_TRANSPORT_EVENT_FLAG_LOCAL 0x00000010u
#define TREVRPC_TRANSPORT_EVENT_FLAG_PEER 0x00000020u
#define TREVRPC_TRANSPORT_EVENT_FLAG_PEER_RESET 0x00000040u
#define TREVRPC_TRANSPORT_EVENT_FLAG_TRANSPORT_ERROR 0x00000080u
#define TREVRPC_TRANSPORT_EVENT_FLAG_CLEAN_FIN 0x00000100u
#define TREVRPC_TRANSPORT_ENDPOINT_SKIP_CERTIFICATE_VALIDATION 0x00000001u
#define TREVRPC_TRANSPORT_ENDPOINT_DEFER_ADMISSION 0x00000002u
#define TREVRPC_TRANSPORT_PROTOCOL_AUTO 0u
#define TREVRPC_TRANSPORT_PROTOCOL_NATIVE 1u
#define TREVRPC_TRANSPORT_PROTOCOL_HTTP3 2u
#define TREVRPC_TRANSPORT_PROTOCOL_WEBTRANSPORT 3u
#define TREVRPC_TRANSPORT_PROTOCOL_MULTIPLEXED 4u
#define TREVRPC_TRANSPORT_WEBTRANSPORT_PROFILE_DRAFT_02 0x00000001u
#define TREVRPC_TRANSPORT_WEBTRANSPORT_PROFILE_DRAFT_07 0x00000002u
#define TREVRPC_TRANSPORT_WEBTRANSPORT_PROFILE_DRAFT_14 0x00000004u
#define TREVRPC_TRANSPORT_WEBTRANSPORT_PROFILE_DRAFT_15 0x00000008u
#define TREVRPC_TRANSPORT_WEBTRANSPORT_PROFILE_ALL_SUPPORTED 0x0000000fu
#define TREVRPC_TRANSPORT_RECEIVE_FLAG_NONE 0u
typedef struct trevrpc_rpc_transport trevrpc_transport;
typedef struct trevrpc_rpc_transport_event trevrpc_transport_event_v1;
typedef struct trevrpc_rpc_transport_receive trevrpc_transport_receive_v1;
typedef struct trevrpc_transport_handle_v1 {
    uint64_t owner;
    uint32_t slot;
    uint32_t generation;
} trevrpc_transport_handle_v1;
typedef struct trevrpc_transport_config_v1 {
    uint32_t struct_size;
    uint32_t struct_version;
    uint32_t event_capacity;
    uint32_t listener_capacity;
    uint32_t connection_capacity;
    uint32_t stream_capacity;
    uint32_t max_receive_owned_count;
    uint32_t flags;
    uint64_t max_receive_owned_bytes;
    uint64_t reserved[5];
} trevrpc_transport_config_v1;
typedef struct trevrpc_transport_endpoint_config_v1 {
    uint32_t struct_size;
    uint32_t struct_version;
    uint32_t protocol;
    uint32_t flags;

    const char* host;
    uint32_t host_len;
    uint16_t port;
    uint16_t peer_bidi_stream_count;

    const char* server_name;
    uint32_t server_name_len;
    uint32_t reserved0;

    const uint8_t* alpn;
    uint32_t alpn_len;
    uint32_t reserved1;

    const char* cert_file;
    uint32_t cert_file_len;
    uint32_t reserved2;
    const char* key_file;
    uint32_t key_file_len;
    uint32_t reserved3;
    const char* ca_cert_file;
    uint32_t ca_cert_file_len;
    uint32_t reserved4;

    const uint8_t* cert_data;
    uint64_t cert_data_len;
    const uint8_t* key_data;
    uint64_t key_data_len;
    const uint8_t* ca_cert_data;
    uint64_t ca_cert_data_len;

    const char* path;
    uint32_t path_len;
    uint32_t webtransport_profiles;
    const char* origin;
    uint32_t origin_len;
    uint32_t max_sessions;

    uint64_t max_frame_size;
    uint64_t max_field_section_size;
    uint64_t max_pending_send_bytes;
    uint64_t max_pending_receive_bytes;
    uint64_t max_idle_timeout_ms;

    uint32_t max_pending_send_count;
    uint32_t max_pending_receive_count;
    uint32_t keep_alive_ms;
    uint32_t stream_recv_window;
    uint32_t conn_flow_control_window;
    uint32_t unresolved_stream_count;
    uint64_t unresolved_stream_bytes;
    uint64_t unresolved_stream_timeout_ms;
    uint64_t reserved[5];
} trevrpc_transport_endpoint_config_v1;
typedef struct trevrpc_transport_wake_source_v1 {
    uint32_t struct_size;
    uint32_t struct_version;
    uint32_t kind;
    uint32_t flags;
    intptr_t native_handle;
    uint64_t reserved[3];
} trevrpc_transport_wake_source_v1;
typedef struct trevrpc_transport_event_info_v1 {
    uint32_t struct_size;
    uint32_t struct_version;
    uint32_t kind;
    uint32_t flags;
    int32_t status;
    uint32_t subject_kind;
    uint64_t sequence;
    trevrpc_transport_handle_v1 subject;
    trevrpc_transport_handle_v1 parent;
    uint64_t operation_id;
    uint64_t application_error_code;
    uint64_t provider_error_code;
    const uint8_t* data;
    uint64_t data_len;
    uint64_t reserved[4];
} trevrpc_transport_event_info_v1;
typedef struct trevrpc_transport_receive_info_v1 {
    uint32_t struct_size;
    uint32_t struct_version;
    uint32_t flags;
    uint32_t reserved0;
    const uint8_t* data;
    uint64_t data_len;
    uint64_t reserved[4];
} trevrpc_transport_receive_info_v1;
typedef struct trevrpc_transport_header_field_v1 {
    const uint8_t* name;
    uint64_t name_len;
    const uint8_t* value;
    uint64_t value_len;
} trevrpc_transport_header_field_v1;
/* All pointers returned in admission info remain valid until the originating
 * event is released. Header order and duplicates are preserved. */
typedef struct trevrpc_transport_admission_info_v1 {
    uint32_t struct_size;
    uint32_t struct_version;
    uint32_t protocol;
    uint32_t reserved0;
    trevrpc_transport_handle_v1 listener;
    const trevrpc_transport_header_field_v1* headers;
    uint64_t header_count;
    const uint8_t* method;
    uint64_t method_len;
    const uint8_t* path;
    uint64_t path_len;
    const uint8_t* authority;
    uint64_t authority_len;
    const uint8_t* origin;
    uint64_t origin_len;
    uint64_t reserved[4];
} trevrpc_transport_admission_info_v1;
typedef struct trevrpc_transport_event_protocol_info_v1 {
    uint32_t struct_size;
    uint32_t struct_version;
    uint32_t protocol;
    uint32_t reserved0;
    uint64_t reserved[4];
} trevrpc_transport_event_protocol_info_v1;
typedef struct trevrpc_transport_diagnostics_v1 {
    uint32_t struct_size;
    uint32_t struct_version;
    uint32_t transport_abi_version;
    uint32_t state;
    int32_t terminal_status;
    uint32_t event_capacity;
    uint32_t queue_depth;
    uint32_t ordinary_queue_depth;
    uint64_t events_enqueued;
    uint64_t events_dequeued;
    uint64_t events_rejected;
    uint64_t receive_owned_count;
    uint64_t peak_receive_owned_count;
    uint64_t receive_owned_bytes;
    uint64_t peak_receive_owned_bytes;
    uint64_t pending_send_bytes;
    uint64_t pending_send_count;
    uint64_t live_listeners;
    uint64_t live_connections;
    uint64_t live_streams;
    uint64_t active_callbacks;
    uint64_t active_api_calls;
    uint64_t wake_signals;
    uint64_t wake_write_eagain;
    uint64_t wake_failures;
    uint64_t provider_error_code;
    uint64_t mandatory_reservations;
    uint64_t reserved[3];
} trevrpc_transport_diagnostics_v1;