trevrpc-c/include/trevrpc_transport_msquic.h

#define TREVRPC_TRANSPORT_MSQUIC_ABI_VERSION 1u
#define TREVRPC_TRANSPORT_MSQUIC_STRUCT_VERSION_1 1u
typedef struct trevrpc_transport_msquic_config_v1 {
    uint32_t struct_size;
    uint32_t struct_version;
    uint32_t flags;
    uint32_t reserved0;
    uint64_t reserved[6];
} trevrpc_transport_msquic_config_v1;